--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/wesdawson/Wes-Dawson/issues"
   },
-  "homepage": "https://github.com/wesdawson/Wes-Dawson#readme"
+  "homepage": "https://github.com/wesdawson/Wes-Dawson#readme",
+  "devDependencies": {
+    "express": "^4.13.4"
+  }
 }
