--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wesdawson/Wes-Dawson#readme",
   "devDependencies": {
+    "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
